crates/lean-rs-host/tests/compile_fail/pooled_session_outlives_pool.stderr
error[E0597]: `pool` does not live long enough
  --> tests/compile_fail/pooled_session_outlives_pool.rs:22:18
   |
21 |         let pool = SessionPool::with_capacity(runtime, 2);
   |             ---- binding `pool` declared here
22 |         pooled = pool.acquire(&caps, &[], None, None).expect("acquire");
   |                  ^^^^ borrowed value does not live long enough
23 |     }
   |     - `pool` dropped here while still borrowed
24 |     // `pooled` borrows `pool`, which dropped at the end of the inner block.
25 |     let _escape = pooled;
   |                   ------ borrow later used here
